# subduction

./: .clippy.toml  .typos.toml  Cargo.toml
.github/: copyright.sh
.github/workflows/: ci.yml
.tickets/: sba-8283.md  sc-f257.md
examples/frameclock_simulated/: Cargo.toml
examples/frameclock_simulated/src/: main.rs
examples/lotta-layers-common/: Cargo.toml
examples/lotta-layers-common/src/: lib.rs
examples/lotta_layers_common/: Cargo.toml
examples/lotta_layers_common/src/: lib.rs
examples/macos-layers/: Cargo.toml
examples/macos-layers/src/: main.rs
examples/macos-lotta-layers/: Cargo.toml
examples/macos-lotta-layers/src/: main.rs
examples/macos-wgpu/: Cargo.toml
examples/macos-wgpu/src/: main.rs
examples/macos_layers/: Cargo.toml
examples/macos_layers/src/: main.rs
examples/macos_lotta_layers/: Cargo.toml
examples/macos_lotta_layers/src/: main.rs
examples/macos_wgpu/: Cargo.toml
examples/macos_wgpu/src/: main.rs
examples/trace-demo/: Cargo.toml
examples/trace_demo/: Cargo.toml
examples/trace_demo/src/: main.rs
examples/wayland_example_common/: Cargo.toml
examples/wayland_example_common/src/: lib.rs  shm.rs  xdg.rs
examples/wayland_layers/: Cargo.toml
examples/wayland_layers/src/: main.rs
examples/wayland_lotta_layers/: Cargo.toml
examples/wayland_lotta_layers/src/: main.rs
examples/wayland_wgpu/: Cargo.toml
examples/wayland_wgpu/src/: main.rs
examples/web-layers/: Cargo.toml
examples/web-layers/src/: lib.rs
examples/web-lotta-layers/: Cargo.toml  index.html
examples/web-lotta-layers/src/: lib.rs
examples/web-video/: Cargo.toml
examples/web-video/src/: lib.rs
examples/web_layers/: Cargo.toml  index.html
examples/web_layers/src/: lib.rs
examples/web_lotta_layers/: Cargo.toml
examples/web_lotta_layers/src/: lib.rs
examples/web_video/: Cargo.toml  index.html
examples/web_video/src/: lib.rs
examples/wgpu_layers/: Cargo.toml
examples/wgpu_layers/src/: main.rs
examples/wgpu_lotta_layers/src/: main.rs
examples/windows_layers/: Cargo.toml
examples/windows_layers/src/: main.rs
examples/windows_lotta_layers/: Cargo.toml
examples/windows_lotta_layers/src/: main.rs
examples/winit_paced_redraw/: Cargo.toml
examples/winit_paced_redraw/src/: main.rs
frameclock/: CHANGELOG.md  Cargo.toml  README.md
frameclock/src/: demand.rs  diagnostics.rs  driver.rs  lib.rs  output.rs  scheduler.rs  time.rs  timeline.rs  timing.rs
frameclock_apple/: CHANGELOG.md  Cargo.toml  README.md
frameclock_apple/src/: ca_display_link.rs  cv_display_link.rs  lib.rs  mach_time.rs  threading.rs
frameclock_wayland/: CHANGELOG.md  Cargo.toml  README.md
frameclock_wayland/src/: lib.rs  presentation.rs  queue.rs  tick.rs  time.rs
frameclock_web/: CHANGELOG.md  Cargo.toml  README.md
frameclock_web/src/: lib.rs  raf.rs
frameclock_windows/: CHANGELOG.md  Cargo.toml  README.md
frameclock_windows/src/: lib.rs  tick.rs  time.rs
mediaclock/: CHANGELOG.md  Cargo.toml  README.md
mediaclock/src/: affine.rs  lib.rs  timeline.rs
subduction-backend-android/: Cargo.toml
subduction-backend-apple/: Cargo.toml
subduction-backend-apple/src/: ca_display_link.rs  lib.rs  mach_time.rs
subduction-backend-wayland/: Cargo.toml
subduction-backend-wayland/src/: lib.rs
subduction-backend-web/: Cargo.toml
subduction-backend-web/src/: lib.rs  raf.rs
subduction-backend-windows/: Cargo.toml
subduction-backend-windows/src/: lib.rs
subduction-backend-x11/: Cargo.toml
subduction-core/: Cargo.toml
subduction-core/src/: backend.rs  clock.rs  lib.rs  scheduler.rs  time.rs  trace.rs  transform.rs
subduction-core/src/layer/: clip.rs  evaluate.rs  id.rs  mod.rs  store.rs
subduction-debug/: Cargo.toml
subduction-debug/src/: pretty.rs
subduction-render/: Cargo.toml
subduction-render/src/: damage.rs  resource.rs
subduction-sync-harness/: Cargo.toml  README.md
subduction-sync-harness/src/: lib.rs
subduction_backend_android/: Cargo.toml
subduction_backend_android/src/: lib.rs
subduction_backend_apple/: Cargo.toml  README.md
subduction_backend_apple/src/: ca_display_link.rs  calayer.rs  cametal.rs  cv_display_link.rs  lib.rs  mach_time.rs  threading.rs
subduction_backend_wayland/: Cargo.toml
subduction_backend_wayland/src/: commit.rs  event_loop.rs  hints.rs  lib.rs  output_registry.rs  presentation.rs  presenter.rs  protocol.rs  queue.rs  tick.rs  time.rs
subduction_backend_web/: Cargo.toml  README.md
subduction_backend_web/src/: lib.rs  presenter.rs  raf.rs
subduction_backend_wgpu/src/: lib.rs  pipeline.rs  presenter.rs
subduction_backend_windows/: Cargo.toml
subduction_backend_windows/src/: composition.rs  lib.rs  presenter.rs  surface.rs  tick.rs  timing.rs
subduction_backend_x11/: Cargo.toml
subduction_backend_x11/src/: lib.rs
subduction_core/: Cargo.toml  README.md
subduction_core/src/: backend.rs  dirty.rs  lib.rs  output.rs  scheduler.rs  timing.rs  trace.rs  transform.rs
subduction_core/src/layer/: blend.rs  clip.rs  evaluate.rs  hit_test.rs  id.rs  mod.rs  store.rs  traverse.rs
subduction_debug/: Cargo.toml
subduction_debug/src/: chrome.rs  lib.rs  pretty.rs  recorder.rs
subduction_render/: Cargo.toml
subduction_render/src/: lib.rs  plan.rs
subduction_sync_harness/: Cargo.toml  README.md
subduction_sync_harness/src/: lib.rs
