[package]
name = "frameclock"
description = "Display-frame timing, scheduling, feedback, and diagnostics"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["frame-pacing", "timing", "scheduler", "no_std"]
categories = ["no-std", "rendering::engine"]

[features]
default = []
std = []

[lints]
workspace = true
