[package]
name = "frameclock_wayland"
description = "Wayland timing adapters for frameclock"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["frame-pacing", "timing", "wayland", "presentation-time", "linux"]
categories = ["os::linux-apis", "rendering::engine"]

[lints]
workspace = true

[dependencies]
frameclock = { workspace = true }
rustix = { version = "1.1.3", default-features = false, features = ["time"] }
