[package]
name = "subduction-backend-apple"
description = "Apple backend for subduction (CADisplayLink, CVDisplayLink, CALayer, CAMetalLayer)"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compositing", "macos", "ios", "calayer", "core-animation"]
categories = ["os::macos-apis", "rendering::engine"]

[features]
default = ["ca-display-link"]
appkit = ["dep:objc2-app-kit"]
cv-display-link = ["dep:objc2-core-video", "dep:dispatch2"]
ca-display-link = ["objc2-quartz-core/CADisplayLink"]

[lints]
workspace = true

[dependencies]
subduction-core = { workspace = true }

hashbrown = { version = "0.16.1", default-features = false, features = [
  "alloc",
  "default-hasher",
] }
kurbo = { workspace = true }

# Apple framework bindings (always required)
objc2 = { version = "0.6", default-features = false, features = ["alloc"] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSObject",
  "NSRunLoop",
  "NSObjCRuntime",
  "NSString",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
  "CALayer",
  "CAMetalLayer",
  "CATransaction",
  "CATransform3D",
  "objc2-core-foundation",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "CFCGTypes",
] }

# cv-display-link feature deps (legacy macOS only)
objc2-core-video = { version = "0.3", optional = true, default-features = false, features = [
  "CVDisplayLink",
  "CVBase",
  "CVReturn",
  "CVHostTime",
] }
dispatch2 = { version = "0.3", optional = true, default-features = false }

# appkit feature deps
objc2-app-kit = { version = "0.3", optional = true, default-features = false, features = [
  "NSResponder",
  "NSView",
  "objc2-core-foundation",
] }
