[package]
name = "subduction_backend_apple"
description = "Apple layer presenters for subduction (CALayer, CAMetalLayer)"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compositing", "macos", "ios", "calayer", "core-animation"]
categories = ["os::macos-apis", "rendering::engine"]

[features]
default = []
appkit = ["dep:objc2-app-kit"]

[lints]
workspace = true

[dependencies]
subduction_core = { workspace = true }

hashbrown = { version = "0.17.0", default-features = false, features = [
  "alloc",
  "default-hasher",
] }
kurbo = { workspace = true }

# Apple framework bindings (always required)
objc2 = { version = "0.6", default-features = false, features = ["alloc"] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSObject",
  "NSRunLoop",
  "NSObjCRuntime",
  "NSString",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
  "CALayer",
  "CAMetalLayer",
  "CATransaction",
  "CATransform3D",
  "objc2-core-foundation",
  "objc2-core-graphics",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
  "CGColor",
  "objc2",
] }

# appkit feature deps
objc2-app-kit = { version = "0.3", optional = true, default-features = false, features = [
  "NSResponder",
  "NSView",
  "objc2-core-foundation",
] }
