[package]
name = "subduction_backend_wayland"
description = "Wayland backend for subduction (frame callbacks, wp_presentation)"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compositing", "wayland", "presentation-time"]
categories = ["rendering::engine"]

[lints]
workspace = true

[dependencies]
subduction_core = { workspace = true, features = ["std"] }
rustix = { version = "1.1.3", features = ["time"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
