[package]
name = "subduction_backend_web"
description = "Web DOM presenter backend for subduction"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compositing", "wasm", "web", "dom"]
categories = ["wasm", "rendering::engine"]

[lints]
workspace = true

[dependencies]
kurbo = { workspace = true }
subduction_core = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
] }
