[package]
name = "subduction_backend_windows"
description = "Windows backend for subduction (DirectComposition, DXGI)"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compositing", "windows", "directcomposition", "dxgi"]
categories = ["os::windows-apis", "rendering::engine"]

[lints]
workspace = true

[dependencies]
subduction_core = { workspace = true, features = ["std"] }
kurbo = { workspace = true }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Performance",
  "Win32_System_Threading",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct2D_Common",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62"
windows-numerics = "0.3"
