[package]
name = "subduction_core"
description = "Retained layer tree and presenter contract for Subduction compositors"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compositing", "layer-tree", "no_std", "timing"]
categories = ["no-std", "rendering::engine"]

[features]
default = []
std = ["frameclock/std", "kurbo/std"]
trace = []
trace-rich = ["trace"]

[lints]
workspace = true

[dependencies]
frameclock = { workspace = true }
kurbo = { workspace = true }
invalidation = { workspace = true }
color = { workspace = true }
