[package]
name = "subduction_debug"
description = "Recording, pretty-printing, and Chrome trace export for subduction diagnostics"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
subduction_core = { workspace = true, features = ["trace", "trace-rich"] }
serde_json = "1"
