[package]
name = "lotta_layers_common"
description = "Shared animation logic for the lotta-layers examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
libm = "0.2"
subduction_core = { workspace = true }
