[package]
name = "macos-lotta-layers"
description = "macOS stress-test: 1000+ animated CALayers in grouped orbits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
lotta-layers-common = { path = "../lotta-layers-common" }
subduction-core = { workspace = true, features = ["trace"] }
subduction-backend-apple = { path = "../../subduction-backend-apple", features = ["appkit"] }
subduction-debug = { path = "../../subduction-debug" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSNotification",
    "NSObject",
    "NSString",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSApplication",
    "NSColor",
    "NSGraphics",
    "NSResponder",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
    "objc2-core-foundation",
    "objc2-quartz-core",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
    "CALayer",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "CGColor",
    "objc2",
] }
