[package]
name = "macos_lotta_layers"
description = "macOS stress-test: 1000+ animated CALayers in grouped orbits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["ca-display-link"]
ca-display-link = ["subduction_backend_apple/ca-display-link"]
cv-display-link = ["subduction_backend_apple/cv-display-link"]

[lints]
workspace = true

[dependencies]
lotta_layers_common = { path = "../lotta_layers_common" }
subduction_core = { workspace = true, features = ["trace"] }
subduction_backend_apple = { path = "../../subduction_backend_apple", default-features = false, features = [
  "appkit",
] }
subduction_debug = { path = "../../subduction_debug" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSNotification",
  "NSObject",
  "NSString",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSApplication",
  "NSColor",
  "NSGraphics",
  "NSResponder",
  "NSRunningApplication",
  "NSView",
  "NSWindow",
  "objc2-core-foundation",
  "objc2-quartz-core",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
  "CALayer",
  "objc2-core-foundation",
  "objc2-core-graphics",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
  "CGColor",
  "objc2",
] }
